use correct comment

--- a/opt/shib-jetty-base/start.ini
+++ b/opt/shib-jetty-base/start.ini
@@ -3,7 +3,7 @@
 --module=deploy
 --module=annotations
 --module=resources
-; --module=console-capture
+# --module=console-capture
 --module=requestlog
 --module=servlets
 --module=jsp
