working base image with Amazon Corretto JDK 11

--- a/opt/shib-jetty-base/start.ini
+++ b/opt/shib-jetty-base/start.ini
@@ -3,8 +3,6 @@
 --module=deploy
 --module=annotations
 --module=resources
-# --module=console-capture
---module=requestlog
 --module=servlets
 --module=jsp
 --module=jstl
@@ -17,9 +15,6 @@
 # NOTE: spawns child Java process
 --exec
 
-# Bypass file validation for the SSL module, to work around a bug in Jetty 9.3.X
---skip-file-validation=ssl
-
 # Uncomment if IdP is installed somewhere other than /opt/shibboleth-idp
 -Didp.home=/opt/shibboleth-idp
 
@@ -31,3 +26,9 @@
 # your particular metadata configuration.
 # This value will be replaced at runtime using the env JAVA_MAX_MEMORY setting.
 -XmxJETTY_MAX_HEAP
+
+# Prevent blocking for entropy
+-Djava.security.egd=file:/dev/urandom
+
+# Set Java tmp location
+#-Djava.io.tmpdir=tmp
